end stages of finishing touches